unpackaged/config/ready/15_Calls/objects/REDU_Custom_Calls__c.object
<CustomObject>
    <fields>
        <fullName>REDU_All_Courses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate that this call count maximum is for the student across all their courses.</description>
        <label>All Courses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REDU_Course__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is the course object that this Calls count relates to.</description>
        <label>Course</label>
        <referenceTo>hed__Course__c</referenceTo>
        <relationshipLabel>Custom Calls</relationshipLabel>
        <relationshipName>Custom_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REDU_Max_Calls__c</fullName>
        <description>Maximum number of calls allowed for this course</description>
        <label>Max Calls</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REDU_Program_Enrollment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is the program enrollment parent for this calls object.</description>
        <label>Program Enrollment</label>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>Custom Calls</relationshipLabel>
        <relationshipName>Custom_Calls</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <validationRules>
        <fullName>Course_Required_If_All_Courses_Unchecked</fullName>
        <active>true</active>
        <description>The Course field is required if the “All courses” checkbox is not checked.</description>
        <errorConditionFormula>AND( ISBLANK( REDU_Course__c ) ,  REDU_All_Courses__c = false )</errorConditionFormula>
        <errorMessage>The Course field is required if the “All courses” checkbox is not checked.</errorMessage>
    </validationRules>
    
    <description>Custom call numbers for individual students.</description>
    <label>Custom Calls</label>
    <nameField>
        <label>Custom Calls Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>