unpackaged/config/ready/15_Calls/objects/REDU_Custom_Calls__c/validationRules/Course_Required_If_All_Courses_Unchecked.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_Required_If_All_Courses_Unchecked</fullName>
    <active>true</active>
    <description>The Course field is required if the “All courses” checkbox is not checked.</description>
    <errorConditionFormula>AND( ISBLANK( REDU_Course__c ) ,  REDU_All_Courses__c = false )</errorConditionFormula>
    <errorMessage>The Course field is required if the “All courses” checkbox is not checked.</errorMessage>
</ValidationRule>